--- a/Tautuyhoa-post.html
+++ b/Tautuyhoa-post.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<title>Nectaria - Free HTML Template by WowThemes.net</title>
+<title>Blog</title>
 <meta name="description" content="Thoughts, reviews and ideas since 1999."/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <link rel="shortcut icon" href="#">
@@ -63,43 +63,45 @@
 		<a class="img" href="author.html" style="background-image: url(assets/img/gravatar.jpg"><span class="hidden">David's Picture</span></a>
 		</figure>
 		<section class="author">
-		<h4><a href="/author/ghosty/">David</a></h4>
-		<p>
-			The blog combining journalist David&#x27;s years of experience covering fashion and culture for among others. Read my blog and you will learn how to become a fashion editor
-		</p>
-		<div class="author-meta">
-			<span class="author-location icon-location">Europe</span>
-			<span class="author-link icon-link"><a href="https://www.wowthemes.net">https://www.wowthemes.net</a></span>
+			<h4><a href="/author/ghosty/">duy</a></h4>
+			<p>
+				tôi là một blogger đam mê viết về việc lưu trữ khoảnh khắc đáng nhớ trong cuộc sống. Với trái tim đam mê nghệ thuật và sự sáng tạo, tôi chia sẻ những trải nghiệm, suy tư và cảm xúc của mình thông qua từng dòng văn, từng bức ảnh và video được cất ở trang web này.
+			</p>
+			<div class="author-meta">
+				<span class="author-location icon-location">Hội An, Việt Nam</span>
+				<span class="author-link icon-link"><a href="https://www.facebook.com/profile.php?id=100077021037082">https://www.facebook.com/profile.php?id=100077021037082</a></span>
+			</div>
+			</section>
+			<section class="share">
+			<h4>Chia sẻ bài viết:</h4>
+			<a class="icon-twitter" href="https://twitter.com/intent/tweet?text=Once%20Upon%20a%20Time&amp;url=#" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
+			<span class="hidden">Twitter</span>
+			</a>
+			<a class="icon-facebook" href="https://www.facebook.com/sharer/sharer.php?u=#" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
+			<span class="hidden">Facebook</span>
+			</a>
+			<a class="icon-google-plus" href="https://plus.google.com/share?url=#" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
+			<span class="hidden">Google+</span>
+			</a>
+			</section>
+			</footer>
+			<div id="disqus_thread">
+			</div>
+			<script>
+				(function() { 
+				var d = document, s = d.createElement('script');
+				s.src = 'https://wowthemesdemo.disqus.com/embed.js';
+				s.setAttribute('data-timestamp', +new Date());
+				(d.head || d.body).appendChild(s);
+				})();
+				</script>
+			</article>
 		</div>
-		</section>
-		<section class="share">
-		<h4>Share this post</h4>
-		<a class="icon-twitter" href="https://twitter.com/intent/tweet?text=Once%20Upon%20a%20Time&amp;url=#" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
-		<span class="hidden">Twitter</span>
-		</a>
-		<a class="icon-facebook" href="https://www.facebook.com/sharer/sharer.php?u=#" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
-		<span class="hidden">Facebook</span>
-		</a>
-		<a class="icon-google-plus" href="https://plus.google.com/share?url=#" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
-		<span class="hidden">Google+</span>
-		</a>
-		</section>
-		</footer>
-		<div id="disqus_thread">
+		</main>
 		</div>
-		<script>
-			(function() { 
-			var d = document, s = d.createElement('script');
-			s.src = 'https://wowthemesdemo.disqus.com/embed.js';
-			s.setAttribute('data-timestamp', +new Date());
-			(d.head || d.body).appendChild(s);
-			})();
-			</script>
-
-</div>
-<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-<script type="text/javascript" src="assets/js/masonry.min.js"></script>
-<script type="text/javascript" src="assets/js/jquery.fitvids.js"></script>
-<script type="text/javascript" src="assets/js/index.js"></script>
-</body>
-</html>
+		<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+		<script type="text/javascript" src="assets/js/masonry.min.js"></script>
+		<script type="text/javascript" src="assets/js/jquery.fitvids.js"></script>
+		<script type="text/javascript" src="assets/js/index.js"></script>
+		</body>
+		</html>
