--- a/author.html
+++ b/author.html
@@ -36,7 +36,7 @@
 	<h1 class="author-title">Duy</h1>
 	<h2 class="author-bio">tôi là một blogger đam mê viết về việc lưu trữ khoảnh khắc đáng nhớ trong cuộc sống. Với trái tim đam mê nghệ thuật và sự sáng tạo, tôi chia sẻ những trải nghiệm, suy tư và cảm xúc của mình thông qua từng dòng văn, từng bức ảnh và video được cất ở trang web này.</h2>
 	<div class="author-meta">
-		<span class="author-location icon-location">Planet Earth</span>
+		<span class="author-location icon-location">Hội An, Việt Nam</span>
 		<span class="author-link icon-link"><a href="https://www.facebook.com/profile.php?id=100077021037082">https://www.facebook.com</a></span>
 		<span class="author-stats"><i class="icon-stats"></i> 13 posts</span>
 	</div>
