--- a/page2.html
+++ b/page2.html
@@ -4,18 +4,7 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <title>Blog</title>
-<meta name="description" content="Thoughts, reviews and ideas since 1999."/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<link rel="shortcut icon" href="#">
-<link rel="stylesheet" type="text/css" href="assets/css/screen.css"/>
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,300italic,300,400italic,700,700italic|Playfair+Display:400,700,400italic,700italic"/>
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8"/>
-<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<title>Blog</title>
-<meta name="description" content="Thoughts, reviews and ideas since 1999."/>
+<meta name="description" content="Lê Ngọc Nam và Vương Nhất Duy"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <link rel="shortcut icon" href="#">
 <link rel="stylesheet" type="text/css" href="assets/css/screen.css"/>
