--- a/author.html
+++ b/author.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <title>Blog</title>
-<meta name="description" content="Thoughts, reviews and ideas since 1999."/>
+<meta name="description" content="Lê Ngọc Nam và Vương Nhất Duy"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <link rel="shortcut icon" href="#">
 <link rel="stylesheet" type="text/css" href="assets/css/screen.css"/>
@@ -13,7 +13,7 @@
 <body class="author-template">
 <div class="site-wrapper">
 	<nav class="main-nav overlay clearfix">
-	<a class="blog-logo" href="index.html"><img src="assets/img/logo.png" alt="Fashion Critiques"/></a>
+	<a class="blog-logo" href="index.html"><img src="assets/img/logo.png" alt=""/></a>
 	<ul id="menu">
 		<li class="nav-home nav-current" role="presentation"><a href="index.html">Home</a></li>
 		<li class="nav-author-page" role="presentation"><a href="author.html">About Me</a></li>
@@ -21,7 +21,7 @@
 		<a href="#"><span class='symbol'>circletwitterbird</span></a>
 		<a href="#"><span class='symbol'>circlefacebook</span></a>
 		<a href="#"><span class='symbol'>circlegoogleplus</span></a>
-		<a href="mailto:wowthemesnet@gmail.com"><span class='symbol'>circleemail</span></a>
+		<a href="mailto:t.2535duyn@gmail.com"><span class='symbol'>circleemail</span></a>
 		</span>
 	</ul>
 	</nav>
