--- a/mocoi-post.html
+++ b/mocoi-post.html
@@ -21,7 +21,7 @@
 		<a href="#"><span class='symbol'>circletwitterbird</span></a>
 		<a href="#"><span class='symbol'>circlefacebook</span></a>
 		<a href="#"><span class='symbol'>circlegoogleplus</span></a>
-		<a href="mailto:wowthemesnet@gmail.com"><span class='symbol'>circleemail</span></a>
+		<a href="mailto:t.2535duyn@gmail.com"><span class='symbol'>circleemail</span></a>
 		</span>
 	</ul>
 	</nav>
@@ -85,14 +85,7 @@
 	</footer>
 	<div id="disqus_thread">
 	</div>
-	<script>
-		(function() { 
-		var d = document, s = d.createElement('script');
-		s.src = 'https://wowthemesdemo.disqus.com/embed.js';
-		s.setAttribute('data-timestamp', +new Date());
-		(d.head || d.body).appendChild(s);
-		})();
-		</script>
+	
 	</article>
 </div>
 </main>
