--- a/page2.html
+++ b/page2.html
@@ -13,7 +13,7 @@
 <body class="home-template">
 <div class="site-wrapper">
 	<nav class="main-nav overlay clearfix">
-	<a class="blog-logo" href="index.html"><img src="assets/img/logo.png" alt="Fashion Critiques"/></a>
+	<a class="blog-logo" href="index.html"><img src="assets/img/logo.png" alt=""/></a>
 	<ul id="menu">
 		<li class="nav-home nav-current" role="presentation"><a href="index.html">Home</a></li>
 		<li class="nav-author-page" role="presentation"><a href="author.html">About Me</a></li>
@@ -21,7 +21,7 @@
 		<a href="#"><span class='symbol'>circletwitterbird</span></a>
 		<a href="#"><span class='symbol'>circlefacebook</span></a>
 		<a href="#"><span class='symbol'>circlegoogleplus</span></a>
-		<a href="mailto:wowthemesnet@gmail.com"><span class='symbol'>circleemail</span></a>
+		<a href="mailto:t.2535duyn@gmail.com"><span class='symbol'>circleemail</span></a>
 		</span>
 	</ul>
 	</nav>
@@ -123,11 +123,18 @@
 			</div>
 		</div>
 		<nav class="pagination" role="navigation">
-		<a class="newer-posts" href="index.html">&larr; Newer Posts</a>
-		<span class="page-number">Page 2 of 2</span>
+		<a class="newer-posts" href="index.html">&larr; Bài post mới hơn</a>
+		<span class="page-number">Trang 2 of 2</span>
 		</nav>
 	</div>
 	</main>
+	<footer class="site-footer clearfix" style="padding: 10px;">
+		<a href="#top" id="back-to-top" class="back-top"></a>
+		<div class="text-center">
+			<h4><br>Thiết Kế Website Blog Cá Nhân</h4>
+			<p><br>Vương Nhất Duy, Lê Ngọc Nam</p>
+		</div>
+		</footer>
 </div>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script type="text/javascript" src="assets/js/masonry.min.js"></script>
