--- a/crossdown-post.html
+++ b/crossdown-post.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <title>Blog</title>
-<meta name="description" content="Thoughts, reviews and ideas since 1999."/>
+<meta name="description" content="Lê Ngọc Nam và Vương Nhất Duy"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <link rel="shortcut icon" href="#">
 <link rel="stylesheet" type="text/css" href="assets/css/screen.css"/>
@@ -21,7 +21,7 @@
 		<a href="#"><span class='symbol'>circletwitterbird</span></a>
 		<a href="#"><span class='symbol'>circlefacebook</span></a>
 		<a href="#"><span class='symbol'>circlegoogleplus</span></a>
-		<a href="mailto:wowthemesnet@gmail.com"><span class='symbol'>circleemail</span></a>
+		<a href="mailto:t.2535duyn@gmail.com"><span class='symbol'>circleemail</span></a>
 		</span>
 	</ul>
 	</nav>
@@ -85,14 +85,6 @@
 		</footer>
 		<div id="disqus_thread">
 		</div>
-		<script>
-			(function() { 
-			var d = document, s = d.createElement('script');
-			s.src = 'https://wowthemesdemo.disqus.com/embed.js';
-			s.setAttribute('data-timestamp', +new Date());
-			(d.head || d.body).appendChild(s);
-			})();
-			</script>
 		</article>
 	</div>
 	</main>
